--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "homepage": "https://github.com/Telerik-final-project/server#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
     "chai-as-promised": "^7.1.1",
     "chart.js": "^2.7.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "express-validator": "^5.1.2",
     "morgan": "^1.9.0",
     "mysql2": "^1.5.2",
     "passport": "^0.4.0",
