--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "* Server -> **Express.js**, __*Based on the MVC design pattern*__   * Database -> **MariaDB**    * ORM -> **Sequelize**   * Users authenticatication -> **Passport.js**",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/nyc --all ./node_modules/.bin/mocha ./test/**/*.js",
     "start": "node ./app/server.js",
     "unit-tests": "./node_modules/.bin/mocha",
     "add-migration": "cd db && node ../node_modules/sequelize-auto-migrations/bin/makemigration.js",
@@ -50,5 +50,10 @@
     "mocha": "^5.0.4",
     "nyc": "^11.6.0",
     "sinon": "^4.4.6"
-  }
+  },
+  "nyc": {
+    "include": [
+      "**/*controllers"
+    ]
+}
 }
