--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "chai-as-promised": "^7.1.1",
     "chart.js": "^2.7.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.1.2",
     "morgan": "^1.9.0",
     "mysql2": "^1.5.2",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.37.1",
     "sequelize-auto-migrations": "^1.0.2",
@@ -55,5 +57,5 @@
     "include": [
       "**/*controllers"
     ]
-}
+  }
 }
