--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jwt-simple": "^0.5.1",
     "morgan": "^1.9.0",
     "mysql2": "^1.5.2",
+    "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
