--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai-as-promised": "^7.1.1",
     "chart.js": "^2.7.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.1.2",
@@ -55,5 +56,5 @@
     "include": [
       "**/*controllers"
     ]
-}
+  }
 }
