--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-validator": "^5.1.2",
     "jwt-simple": "^0.5.1",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "mysql2": "^1.5.2",
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
